--- a/petshop/shop/templates/shop/classification.html
+++ b/petshop/shop/templates/shop/classification.html
@@ -1,5 +1,18 @@
 {% extends 'base.html' %}
 
+{% block sidebar %}
+<div class="col-md-4">
+  <div class="list-group">
+      {% for item in classifications %}
+      <a href="{{ item.get_absolute_url }}" class="list-group-item list-group-item-action">{{ item.title }}</a>
+      {% endfor %}
+  </div>
+</div>
+{% endblock %}
+
+
+
+
 {% block content %} 
 <div class="col-md-8">
   {% for animal in animals %}
@@ -16,7 +29,7 @@
               <div class="media-body">
                   <h5 class="card-title">{{ animal.title }}</h5>
                   <p class="card-text">{{ animal.description|safe|linebreaks }}</p>
-                  <a href="#" class="btn btn-primary">Далее...</a>        
+                  <a href="{{ animal.get_absolute_url }}" class="btn btn-primary">Далее...</a>        
               </div>
           </div>
 
@@ -28,96 +41,3 @@
   {% endfor %}
   </div>
 {% endblock content %}
-
-
-{% block sidebar %}
-<div class="col-md-4">
-  <div class="list-group">
-      {% for item in classifications %}
-      <a href="{% url 'classification' item.pk %}" class="list-group-item list-group-item-action">{{ item.title }}</a>
-      {% endfor %}
-  </div>
-</div>
-{% endblock %}
-
-<!doctype html>
-<html lang="ru">
-  <head>
-    <!-- Обязательные метатеги -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>{{ title }}</title>
-  </head>
-  <body>
-
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">Pet Shop</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Главная</a></li>
-              <li class="nav-item"><a class="nav-link" href="/">Добавить животное</a></li> 
-            </ul>
-        </div>
-      </nav>
-
-<div class="container mt-3">
-    <div class="row">
-
-        <div class="col-md-4">
-            <div class="list-group">
-                {% for item in classifications %}
-                <a href="{% url 'classification' item.pk %}" class="list-group-item list-group-item-action">{{ item.title }}</a>
-                {% endfor %}
-            </div>
-        </div>
-
-        <div class="col-md-8">
-        {% for animal in animals %}
-        <div class="card mb-3">
-            <div class="card-header">
-                Классификация: {{ animal.classification }}
-            </div>
-            <div class="card-body">
-                <div class="media">
-                    {% if animal.photo %}
-                        <img src="{{ animal.photo.url }}" arl="" width="350" class="mr-3">    
-                    {% endif %}
-
-                    <div class="media-body">
-                        <h5 class="card-title">{{ animal.title }}</h5>
-                        <p class="card-text">{{ animal.description|safe|linebreaks }}</p>
-                        <a href="#" class="btn btn-primary">Далее...</a>        
-                    </div>
-                </div>
-
-            </div>
-            <div class="card-footer text-muted">
-                {{ animal.created_at|date:"Y-m-d H:i"  }}
-            </div>
-        </div>
-        {% endfor %}
-        </div>
-    </div>
-</div>
-
-    <!-- Дополнительный JavaScript; выберите один из двух! -->
-
-    <!-- Вариант 1: Bootstrap в связке с Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Вариант 2: Bootstrap JS отдельно от Popper
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
