--- a/petshop/shop/templates/shop/index.html
+++ b/petshop/shop/templates/shop/index.html
@@ -8,7 +8,7 @@
 <div class="col-md-4">
   <div class="list-group">
       {% for item in classifications %}
-      <a href="{% url 'classification' item.pk %}" class="list-group-item list-group-item-action">{{ item.title }}</a>
+      <a href="{{ item.get_absolute_url }}" class="list-group-item list-group-item-action">{{ item.title }}</a>
       {% endfor %}
   </div>
 </div>
@@ -20,7 +20,7 @@
   {% for animal in animals %}
   <div class="card mb-3">
       <div class="card-header">
-          Классификация: <a href="{% url 'classification' animal.classification.pk %}">{{ animal.classification }} </a>
+          Классификация: <a href="{{ animal.classification.get_absolute_url }}">{{ animal.classification }} </a>
       </div>
       <div class="card-body">
           <div class="media">
@@ -30,8 +30,8 @@
 
               <div class="media-body">
                   <h5 class="card-title">{{ animal.title }}</h5>
-                  <p class="card-text">{{ animal.description|safe|linebreaks }}</p>
-                  <a href="#" class="btn btn-primary">Далее...</a>        
+                  <p class="card-text">{{ animal.description|safe|linebreaks|truncatewords:50 }}</p>
+                  <a href="{{ animal.get_absolute_url }}" class="btn btn-primary">Далее...</a>        
               </div>
           </div>
 
