--- a/petshop/templates/base.html
+++ b/petshop/templates/base.html
@@ -17,10 +17,31 @@
 <div class="container mt-3">
     <!-- <h1>{{ title }}</h1> -->
     <div class="row">
-
+      
+      <div class="col-md-3">
         {% block sidebar %}sidebar{% endblock %}
-        {% block content %}content{% endblock %}
+      </div>
+      <div class="col-md-9">
+        {% if messages %}
+          {% for message in messages %}
+
+            {% if message.tags == 'error' %}
+            <div class="alert alert-danger" role="alert">
+              {{ message }}
+            </div>
+            {% else %}
+            <div class="alert alert-{{ message.tags }}" role="alert">
+              {{ message }}
+            </div>
+            {% endif %}
+
+
+          {% endfor %}
         
+        {% endif %}
+        
+        {% block content %}content{% endblock %}
+      </div>    
     </div>
 </div>
 
