--- a/petshop/templates/include/_nav.html
+++ b/petshop/templates/include/_nav.html
@@ -10,5 +10,9 @@
           <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Главная</a></li>
           <li class="nav-item"><a class="nav-link" href="{% url 'add_animal' %}">Добавить животное</a></li> 
         </ul>
+
+        <span class="navbar-text">
+          <a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a>
+        </span>  
     </div>
 </nav>
