--- a/petshop/shop/templates/shop/index.html
+++ b/petshop/shop/templates/shop/index.html
@@ -25,7 +25,7 @@
       <div class="card-body">
           <div class="media">
               {% if animal.photo %}
-                  <img src="{{ animal.photo.url }}" arl="" width="350" class="mr-3">    
+                  <img src="{{ animal.photo.url }}" alt="" width="350" class="mr-3">    
                   {% endif %}
 
               <div class="media-body">
