--- a/petshop/shop/templates/shop/login.html
+++ b/petshop/shop/templates/shop/login.html
@@ -19,5 +19,11 @@
  
 <h1>Вход</h1>
 
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary btn-block">Войти</button>
+</form>
+
 
 {% endblock content %}
